--- a/src/ObjectModel/BOM/windowopen1.html
+++ b/src/ObjectModel/BOM/windowopen1.html
@@ -7,24 +7,29 @@
     <input type="button" onclick="open2()" value="window.open('demo2.html','_self');">
     <input type="button" onclick="open3()" value="window.open('demo2.html','_blank');">
     <input type="button" onclick="open4()" value="window.open('demo2.html','ot');">
-    <input type="button" onclick="open5()" value="window.open('demo2.html','_blank', 'width=200, height=200 , resizable=no');">
+    <input type="button" onclick="open5()"
+           value="window.open('demo2.html','_blank', 'width=200, height=200 , resizable=no');">
 </head>
 <body>
 <script>
-    function open1(){
+    function open1() {
         window.open('demo2.html'); //새창 열림 = '_blank'
     }
-     function open2(){
-        window.open('demo2.html','_self'); //해당 창에서 열림
+
+    function open2() {
+        window.open('demo2.html', '_self'); //해당 창에서 열림
     }
-    function open3(){
-        window.open('demo2.html','_blank'); //해당 창에서 열림
+
+    function open3() {
+        window.open('demo2.html', '_blank'); //해당 창에서 열림
     }
-    function open4(){
-        window.open('demo2.html','ot'); //재실행 시 동일한 새 창이 계속 열림
+
+    function open4() {
+        window.open('demo2.html', 'ot'); //재실행 시 동일한 새 창이 계속 열림
     }
-    function open5(){
-        window.open('demo2.html','_blank', 'width=200, height=200 , resizable=no'); //브라우저의 보완적인 측면 제한 / 저 사이즈에 맞게 새 창 띄움
+
+    function open5() {
+        window.open('demo2.html', '_blank', 'width=200, height=200 , resizable=no'); //브라우저의 보완적인 측면 제한 / 저 사이즈에 맞게 새 창 띄움
     }
 
 </script>
